--- a/stories/vaccines/index.html
+++ b/stories/vaccines/index.html
@@ -98,6 +98,7 @@
                     </p>
                 <p>President Trump launches Operation Warp Speed, an initiavtive to produce a COVID vaccine.
                 </p>
+                </div>
                 <div class="step">
                     <p class="dates">May 28, 2020</p>
                     <p>United States' COVID-19 death toll surpasses 100,000.
@@ -127,7 +128,6 @@
                 </div>
                 <div class="step">
                     <p class="dates">April 21, 2021</p>
-                    </p>
                     <p>U.S. surpasses 200 million vaccinations administered.</p>
                 </div>
                 <div class="step">
