--- a/stories/vaccines/index.html
+++ b/stories/vaccines/index.html
@@ -319,7 +319,7 @@
         scroller
           .setup({
             step: "#scrolly article .step",
-            debug: true,
+            // debug: true,
             offset: 0.5
           })
           .onStepEnter(handleStepEnter)
