--- a/stories/vaccines/index.html
+++ b/stories/vaccines/index.html
@@ -253,7 +253,7 @@
                 data-aspect-ratio="1.283" data-min-width="0">
                 <div style="padding: 0 0 77.9412% 0;"></div>
                 <img id="g-visualization_svg-Artboard_1-img" class="g-aiImg" alt=""
-                    src="visualization_svg-Artboard_1.png" />
+                    src="./ai2html-output/visualization_svg-Artboard_1.png" />
                 <div id="g-ai0-1" class="g-Layer_1 g-aiAbs g-aiPointText"
                     style="top:2.662%;margin-top:-7.7px;left:5.2107%;width:70px;">
                     <p class="g-pstyle0">350 million</p>
