Added vaccine story to homepage

--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
     <button>Data+Viz</button>
     <br><br>
     <div class="cards-wrapper">
+        <a href="stories/vaccines" target="_blank">
+            <div class="story-card">
+                <img src="card-photos/vaccines.jpg" alt="Vaccines" style="width:100%">
+                <div class="story-card-container">
+                    <h3>What do Pfizer, Moderna and J&J vaccines have in common?</h3>
+                    <h4>April 2022</h4>
+                </div>
+            </div>
+        </a>
         <a href="stories/ny-state-spills" target="_blank">
             <div class="story-card">
                 <img src="card-photos/oil-spill.jpg" alt="Oil spill" style="width:100%">
