--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="cards-wrapper">
         <a href="stories/vaccines" target="_blank">
             <div class="story-card">
-                <img src="card-photos/vaccines.jpg" alt="Vaccines" style="width:100%">
+                <img src="card-photos/vaccine.jpg" alt="Vaccines" style="width:100%">
                 <div class="story-card-container">
                     <h3>What do Pfizer, Moderna and J&J vaccines have in common?</h3>
                     <h4>April 2022</h4>
