--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 <img src="card-photos/vaccine.jpg" alt="Vaccines" style="width:100%">
                 <div class="story-card-container">
                     <h3>What do Pfizer, Moderna and J&J vaccines have in common?</h3>
+                    <p>A really simple data dive!</p>
                     <h4>April 2022</h4>
                 </div>
             </div>
