--- a/stories/vaccines/index.html
+++ b/stories/vaccines/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="vaccines-stylesheet.css">
+    <link rel="icon" type="image/x-icon" href="sunflower.png">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         #scrolly {
             position: relative;
