--- a/stories/vaccines/index.html
+++ b/stories/vaccines/index.html
@@ -83,9 +83,9 @@
 
         .step p {
             text-align: center;
-            padding: 1.5rem;
+            padding: 1.2rem;
             font-size: 1.5rem;
-            background-color: #000000;
+            background-color: #4d4d4e;
         }
     </style>
     <style media="screen,print">
@@ -141,7 +141,7 @@
         }
 
         #g-visualization_svg-Artboard_1 .g-pstyle0 {
-            height: 12px;
+            height: 18px;
         }
 
         #g-visualization_svg-Artboard_1 .g-pstyle1 {
@@ -195,7 +195,7 @@
 
         #g-venn_svg-Artboard_1 p {
             font-weight: 500;
-            line-height: 16px;
+            line-height: 26px;
             height: auto;
             opacity: 1;
             letter-spacing: 0em;
@@ -449,7 +449,8 @@
                         <div id="g-venn_svg-Artboard_1" class="g-artboard" style="width: 854px; height: 576px"
                             data-aspect-ratio="1.5" data-min-width="0">
                             <div style="padding: 0 0 66.6667% 0;"></div>
-                            <img id="g-venn_svg-Artboard_1-img" class="g-aiImg" alt=""
+                            <img id="g-venn_svg-Artboard_1-img" class="g-aiImg" alt="Number of ingredients in top three US' manufacturers' 
+                            COVID-19 vaccines"
                                 src="./ai2html-output-venn/venn_svg-Artboard_1.png" />
                             <div id="g-ai0-1" class="g-Layer_1 g-aiAbs"
                                 style="top:19.0972%;left:10.8669%;width:81.0185%;">
