--- a/stories/r-place/index.html
+++ b/stories/r-place/index.html
@@ -10,6 +10,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
+
+    <meta property="og:Inside r/place" content="Inside r/place"/>
+    <meta property="og:image" content="final-rplace.png"/>
+    <meta property="og:url" content="https://areenaarora.com/stories/r-place/"/>
+    <meta property="og:description"
+        content="Was this cosplay, roleplay or just devoted artists? Who knows."/>
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Inside r/place">
+    <meta name="twitter:description"
+    content="Was this cosplay, roleplay or just devoted artists? Who knows."/>
+    <meta name="twitter:site" content="@AreenaArora">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="copyright" content="Inside r/place">
+    <meta name="description"
+    content="Was this cosplay, roleplay or just devoted artists? Who knows."/>
+    <meta name="keywords" content="Areena Arora, data, journalist, data journalism, Columbia">
+    <meta name="robots" content="noindex, nofollow" />
+
     <title>Inside r/place</title>
 </head>
 
