--- a/index.html
+++ b/index.html
@@ -110,6 +110,15 @@
     <button>Reporting+Writing</button>
     <br><br>
     <div class="cards-wrapper">
+        <a href='https://areenaarora.com/stories/uttarakhand-floods/' target="_blank">
+            <div class="story-card">
+                <img src="card-photos/uttarakhand.jpg" alt="Temple bells" style="width:100%">
+                <div class="story-card-container">
+                    <h3>Is NYC prepared to handle flash floods?</h3>
+                    <h4>April 2022</h4>
+                </div>
+            </div>
+        </a>
         <a href='https://areenaarora.com/stories/r-place/' target="_blank">
             <div class="story-card">
                 <img src="card-photos/final-rplace.png" alt="r/place artboard" style="width:100%">
