--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
     <button>Reporting+Writing</button>
     <br><br>
     <div class="cards-wrapper">
-        <a href='https://areenaarora.com/stories/uttarakhand-floods/' target="_blank">
+        <a href='https://areenaarora.com/stories/street-flooding/' target="_blank">
             <div class="story-card">
-                <img src="card-photos/uttarakhand.jpg" alt="Temple bells" style="width:100%">
+                <img src="card-photos/street-flood.jpg" alt="Temple bells" style="width:100%">
                 <div class="story-card-container">
                     <h3>Is NYC prepared to handle flash floods?</h3>
                     <h4>April 2022</h4>
