--- a/stories/street-flooding/index.html
+++ b/stories/street-flooding/index.html
@@ -26,9 +26,19 @@
     <meta name="keywords" content="Areena Arora, data, journalist, data journalism, Columbia">
     <meta name="robots" content="noindex, nofollow" />
 
-    <title>Street flooding in NYC</title>
+    <title>Street-flooding-NYC</title>
 </head>
-
+<div class="header-container">
+    <img src="rain.jpg"
+        style="width:100vw; height:100vh; margin-right: -100px; margin-top: -80px; margin-bottom: 10px; max-width: 100vw; object-fit: cover">
+    <div class="bottom-left-text-new">Remembering Uttarakhand floods</div>
+</div>
+<nav>
+    <a href="https://areenaarora.com">
+        <i class="fas fa-home fa-2x" aria-hidden="true"></i>
+    </a>
+</nav>
+<br><br>
 <div class="main-content">
 <h1>The city’s streets are flooding, and some zip codes are getting affected more than others</h1>
 <p>When Hurricane Ida hit the city last September, New Yorkers shared images and videos of flooded subway stations and streets on social media. While some blamed climate change, others blamed the city’s poorly kept infrastructure, or both.</p>
