--- a/stories/street-flooding/index.html
+++ b/stories/street-flooding/index.html
@@ -72,7 +72,7 @@
     <p>In 2020, the city announced a $6 million infrastructure upgrade to tackle street flooding on Staten Island.</p>
     <h2>“The problem with urban flooding is that it’s hard to locate exactly where it’s happening,” Candace Agonafir,
         one of the study’s co-authors said.</h2>
-    <p>For the study, the choice to break data down to zip code level was a strategic one, Devineni said.</p>
+    <p>For the study, the choice to break data down to zip code level was a strategic one, Naresh Devineni, another co-author of the study, said.</p>
     <p>The inspiration behind the study was just that: a quest to find exactly where flooding occurs and potentially use
         the findings for future city planning.</p>
     <h2>“We thought: What could be a better way than crowd sourcing for our data?” Agonafir said.</h2>
@@ -80,7 +80,7 @@
         in city planning. </p>
     <p>While precipitation remained the biggest factor in predicting street flooding, the study found that for 21% of
         the city’s 197 zip codes manhole overflow complaints were significant to predicting street flooding. </p>
-    <p>While the findings didn’t particularly surprise Agonafir and Naresh Devineni, another co-author of the study, one
+    <p>While the findings didn’t particularly surprise Agonafir and Devineni, one
         conclusion did get their attention — that catch basins-related complaints are a predictor for street flooding
         complaints. The study found that these complaints predicted street flooding in 47% zip codes in the city.</p>
     <p>Catch basins are street gutters that open into sewers and are meant to prevent water clogging on streets.</p>
