--- a/stories/street-flooding/index.html
+++ b/stories/street-flooding/index.html
@@ -101,9 +101,10 @@
         planning, poor infrastructural upkeep and residents’ behavior for causing street flooding.</p>
     <h2>“On my block, we’ve always had flooding,” D'souza said. “I’m not even close to water.”</h2>
     <h2>“We have old sewer systems … but with that in mind, we have to be careful with what we’re dumping down the
-        drain,” he said, adding that people tend to be careless about proper waste disposal. For example, during the
-        pandemic, residents became “careless” about how they discarded waste such as plastic gloves, D’souza said, which
-        led to increases in drain pipes getting clogged. </h2>
+        drain,” he said, adding that people tend to be careless about proper waste disposal.</h2>
+        
+        <p>For example, during the pandemic, residents became “careless” about how they discarded waste such as plastic gloves, D’souza said, which
+        led to increases in drain pipes getting clogged. </p>
     <p>City’s department of environmental protection could not be reached for comments.</p>
     <h2>“Manhattan is the new Miami,” Devitt said. “We have to future proof the city.”</h2>
 </div>
