--- a/stories/street-flooding/index.html
+++ b/stories/street-flooding/index.html
@@ -107,4 +107,6 @@
         led to increases in drain pipes getting clogged. </p>
     <p>City’s department of environmental protection could not be reached for comments.</p>
     <h2>“Manhattan is the new Miami,” Devitt said. “We have to future proof the city.”</h2>
+<br>
+    <p style="font-size:18px"><i>This story is a work in progress and will be updated soon.</i></p>
 </div>
