--- a/playground.html
+++ b/playground.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="stylesheet-playground.css">
+    <link rel="stylesheet" href="./stylesheets/new-stylesheet.css">
+    <link rel="stylesheet" href="./stylesheets/stylesheet-playground.css">
     <link rel="icon" type="image/x-icon" href="sunflower.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,14 +39,13 @@
     <h1>
         This is my playground!🌻
     </h1>
-    <p class="p-playground"> It's a catalogue of my ongoing projects + things I find interesting. If
+    <h2> It's a catalogue of my ongoing projects + things I find interesting. If
         you have thoughts/feedback/suggestions about these projects, <mark><a href="mailto:areena.arora@gmail.com" ,
-                target="_blank">I'd love to hear from you!</a></mark></p>
+                target="_blank">I'd love to hear from you!</a></mark></h2>
     <br>
-    <h2>What's Areena upto?🌐</h2>
     <div class="three-dabbas">
         <div class="sticky-notes">
-            <h3><u>Ongoing projects/tasks</u></h3>
+            <h3>Ongoing projects/tasks🌐</h3>
             <ul>
                 <li>
                     <h2>Learning Altair</h2>
@@ -97,4 +96,4 @@
             </div>
         </div>
     </div>
-    <button id="update">Last updated: March 17, 2022</button>
+    <button id="update">Last updated: April 13, 2022</button>
