--- a/aboutme.html
+++ b/aboutme.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="stylesheet-aboutme.css">
+    <link rel="stylesheet" href="./stylesheets/new-stylesheet.css">
+    <link rel="stylesheet" href="./stylesheets/stylesheet-aboutme.css">
     <link rel="icon" type="image/x-icon" href="sunflower.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,38 +37,43 @@
     </nav>
     <div class="aboutme-div">
         <h2>Hi there!</h2>
-        <div class="responsive-wrapper">
+        <div class="responsive-wrapper-aboutme">
             <div>
-                <p>I'm interested in covering <mark> <span
-                            style="background-color:#ddff00">climate
-                            justice</span></mark>, <mark> <span style="background-color:#126ebf; color:aliceblue">big tech</span></mark>
+                <h3>I'm interested in covering <mark> <span style="background-color:#ddff00">climate
+                            justice</span></mark>, <mark> <span style="background-color:#126ebf; color:aliceblue">big
+                            tech</span></mark>
                     and
-                    the intersection of the two using <mark><span style="background-color:#6d2f96; color: rgb(180, 227, 13);">data</span></mark>.
-                </p>
-                <p>
+                    the intersection of the two using <mark><span
+                            style="background-color:#6d2f96; color: rgb(180, 227, 13);">data</span></mark>.
+                </h3>
+                <br>
+                <h3>
                     I've worked as a city government reporter for a <a href="https://www.idahopress.com/"
                         target="_blank"><span style="color:#1cb117"> local newspaper in Idaho,</span></a> for <a
                         href="https://www.refinitiv.com/en/products/eikon-trading-software" target="_blank"><span
                             style="color:#ff8000">Reuters-Refinitiv terminal
                             service Eikon</span></a> and helped lead a team at a media startup, <a
                         href="https://glance.com/" target="_blank"><span style="color:#FF0049">Glance.</span></a>
-                </p>
-                <p>Outside of all things news, I
-                    <strong>LOVE</strong>
+                </h3>
+                <br>
+                <h3>Outside of all things news, I <strong>LOVE</strong>
                     cooking —I make my own cheese and breads—the whole deal. I'm also a newbie plant mom🪴 :)
-                </p>
-                <p>
+                </h3>
+                <br>
+                <h3>
                     I'm pursuing a master's degree in <strong>Data Journalism</strong> from <span
                         style="color: #000d74">Columbia
                         University.</span> I write a <a href="https://areena.substack.com/" target="_blank">weekly
                         newsletter,</a> and I'm <b>always</b> up for good conversations over a cup of ✨<span
                         class='blink-text'>chai!</span>✨
-                </p>
-                <p>
+                </h3>
+                <h3>
+                    <br>
                     <b>Data analysis:</b> Python [Pandas, Beautiful Soup, Selenium], Regex, SQL, Excel
-                </p>
-                <p> <b>Visualization:</b> Adobe Illustrator, QGIS, Datawrapper, CSS </p>
-                <p> <b>Languages:</b> Hindi, Punjabi </p>
+                </h3>
+                <h3> <b>Visualization:</b> Adobe Illustrator, QGIS, Datawrapper, CSS </h3>
+                <br><br>
+                <h3> <b>Languages:</b> Hindi, Punjabi </h3>
                 <br>
             </div>
             <img src="Areena-Arora.jpeg" class="responsive-img" />
@@ -84,5 +89,5 @@
                 :)</a>
         </div>
     </div>
-    
+
 </body>
