--- a/index.html
+++ b/index.html
@@ -58,36 +58,27 @@
     </div>
     <br><br>
     <div class="cards-wrapper">
-        <a href="stories/vaccines" target="_blank">
+        <a href="stories/data-viz/vaccines" target="_blank">
             <div class="story-card">
-                <img src="../card-photos/vaccine.jpg" alt="Vaccines" style="width:100%">
+                <img src="./card-photos/vaccine.jpg" alt="Vaccines" style="width:100%">
                 <div class="story-card-container">
                     <h3>What do Pfizer, Moderna and J&J vaccines have in common?</h3>
                     <h4>April 2022</h4>
                 </div>
             </div>
         </a>
-        <a href="stories/ny-state-spills" target="_blank">
+        <a href="stories/data-viz/style-guides" target="_blank">
             <div class="story-card">
-                <img src="../card-photos/oil-spill.jpg" alt="Oil spill" style="width:100%">
-                <div class="story-card-container">
-                    <h3>An analysis of hazardous material spill incidents in New York State over five years</h3>
-                    <h4>February 2022</h4>
-                </div>
-            </div>
-        </a>
-        <a href="stories/style-guides" target="_blank">
-            <div class="story-card">
-                <img src="../card-photos/editor.jpg" alt="editor image" style="width:100%">
+                <img src="./card-photos/editor.jpg" alt="editor image" style="width:100%">
                 <div class="story-card-container">
                     <h3>Comparing different newsrooms' style</h3>
                     <h4>December 2021</h4>
                 </div>
             </div>
         </a>
-        <a href='https://areena.substack.com/p/building-my-first-website-from-framework?utm_source=url' target="_blank">
+        <a href='https://areena.substack.com/p/building-my-first-website-from-framework' target="_blank">
             <div class="story-card">
-                <img src="../card-photos/idea.jpg" alt="idea" style="width:100%">
+                <img src="./card-photos/idea.jpg" alt="idea" style="width:100%">
                 <div class="story-card-container">
                     <h3>My digital playground — This website</h3>
                     <h4>ongoing</h4>
@@ -99,27 +90,27 @@
     <button>Reporting+Writing</button>
     <br><br>
     <div class="cards-wrapper">
-        <a href='https://areenaarora.com/stories/street-flooding/' target="_blank">
+        <a href='stories/writing/street-flooding' target="_blank">
             <div class="story-card">
-                <img src="../card-photos/street-flood.jpg" alt="Temple bells" style="width:100%">
+                <img src="./card-photos/street-flood.jpg" alt="Temple bells" style="width:100%">
                 <div class="story-card-container">
                     <h3>Is NYC prepared to handle flash floods?</h3>
                     <h4>April 2022</h4>
                 </div>
             </div>
         </a>
-        <a href='https://areenaarora.com/stories/r-place/' target="_blank">
+        <a href='stories/writing/r-place' target="_blank">
             <div class="story-card">
-                <img src="../card-photos/final-rplace.png" alt="r/place artboard" style="width:100%">
+                <img src="./card-photos/final-rplace.png" alt="r/place artboard" style="width:100%">
                 <div class="story-card-container">
                     <h3>Inside r/place</h3>
                     <h4>April 2022</h4>
                 </div>
             </div>
         </a>
-        <a href='https://areenaarora.com/stories/uttarakhand-floods/' target="_blank">
+        <a href='stories/writing/uttarakhand-floods' target="_blank">
             <div class="story-card">
-                <img src="../card-photos/uttarakhand.jpg" alt="Temple bells" style="width:100%">
+                <img src="./card-photos/uttarakhand.jpg" alt="Temple bells" style="width:100%">
                 <div class="story-card-container">
                     <h3>Remembering 2013 Uttarakhand Floods</h3>
                     <h4>March 2022</h4>
@@ -129,7 +120,7 @@
         <a href='https://www.idahopress.com/news/local/2cscoop/indian-creek-plaza-over-budget-and-behind-original-construction-schedule/article_729c087a-780c-5202-bacf-34255edb016d.html'
             target="_blank">
             <div class="story-card">
-                <img src="../card-photos/construction.jpg" alt="construction" style="width:100%">
+                <img src="./card-photos/construction.jpg" alt="construction" style="width:100%">
                 <div class="story-card-container">
                     <h3>Indian Creek Plaza — over budget and behind original construction schedule</h3>
                     <h4>October 2017</h4>
@@ -139,7 +130,7 @@
         <a href='https://www.idahopress.com/news/local/2cscoop/culvert-concerns-culvert-report-reveals-11-other-structures-in-deficient-condition/article_e1386f9b-49d1-518f-af3f-b20cad88bf62.html'
             target="_blank">
             <div class="story-card">
-                <img src="../card-photos/culvert.jpg" alt="Culvert" style="width:100%">
+                <img src="./card-photos/culvert.jpg" alt="Culvert" style="width:100%">
                 <div class="story-card-container">
                     <h3>Culvert concerns: Culvert report reveals 11 other structures in deficient condition</h3>
                     <h4>December 2017</h4>
@@ -148,7 +139,7 @@
         </a>
         <a href='https://apnews.com/article/10ab9cb7a5e24bdd86337d36a48c539b' target="_blank">
             <div class="story-card">
-                <img src="../card-photos/RV.jpg" alt="RV" style="width:100%">
+                <img src="./card-photos/RV.jpg" alt="RV" style="width:100%">
                 <div class="story-card-container">
                     <h3>As housing inventory shrinks, people look to living in RVs</h3>
                     <h4>April 2018</h4>
