Added nyc salaries page

--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
     </div>
     <br><br>
     <div class="cards-wrapper">
+        <a href="stories/data-viz/salaries" target="_blank">
+            <div class="story-card">
+                <img src="./card-photos/nyc.jpg" alt="New York City" style="width:100%">
+                <div class="story-card-container">
+                    <h3>70 NYC employees made more, on average, than everyone else by working extra overtime hours</h3>
+                    <h4>April 2022</h4>
+                </div>
+            </div>
+        </a>
         <a href="stories/data-viz/vaccines" target="_blank">
             <div class="story-card">
                 <img src="./card-photos/vaccine.jpg" alt="Vaccines" style="width:100%">
