--- a/stories/data-viz/salaries/index.html
+++ b/stories/data-viz/salaries/index.html
@@ -29,7 +29,7 @@
     <div class="header-container">
         <img src="nyc.jpg"
             style="width:100vw; height:100vh; margin-right: -100px; margin-top: -80px; margin-bottom: 10px; max-width: 100vw; margin-left: -100px; object-fit: cover">
-        <div class="bottom-left-text-salaries">40 ex-NYC employees racked up on overtime pay in 2020</div>
+        <div class="bottom-left-text-salaries">70 ex-NYC employees made more in overtime, on average, than everyone else</div>
     </div>
     <div class="main-content">
         <h1 style="color: rgb(81, 79, 79)">What does that mean?</h1>
