Updating salaries index

--- a/stories/data-viz/salaries/index.html
+++ b/stories/data-viz/salaries/index.html
@@ -29,25 +29,28 @@
     <div class="header-container">
         <img src="nyc.jpg"
             style="width:100vw; height:100vh; margin-right: -100px; margin-top: -80px; margin-bottom: 10px; max-width: 100vw; margin-left: -100px; object-fit: cover">
-        <div class="bottom-left-text-salaries">70 ex-NYC employees made more in overtime, on average, than everyone else</div>
+        <div class="bottom-left-text-salaries">70 ex-NYC employees made more in overtime, on average, than everyone else
+        </div>
     </div>
     <div class="main-content">
         <h1 style="color: rgb(81, 79, 79)">What does that mean?</h1>
         <p>
-            Between 2017-2021, 805 out of over 127,000 city employees worked more hours in overtime than regular hours.
-            These 805 employees are from 39 of the 150 agencies on city's payroll. This is a data exercise into what
-            their payroll data can tell us.
+            Between 2017-2021, 1556 out of over 142,000 city employees worked more hours in overtime than regular hours.
+            They represent 49 of the 150 agencies on city's payroll. This is a data exercise into what
+            their payroll data can tell us, without any journalistic interviews.
         </p>
         <p>The data for this story is sourced from <a
                 href="https://data.cityofnewyork.us/City-Government/Citywide-Payroll-Data-Fiscal-Year-/k397-673e/data" ;
                 target="_blank">NYC Open Data.</a></p>
-        <p>Of these 805 employees, 284 are from the Police Department, followed by the Department of Parks and
-            Recreation and the Fire Department.</p>
-        <p>For most Parks & Rec employees, their regular work hours were listed to be below zero in the dataset. The
+        <p>Of these 1556 employees, 432 are from the Police Department, followed by 184 from the Department of
+            Children's Services and 150 from Parks & Recreation Department.</p>
+        <p>For 581 employees, their regular work hours were listed to be below zero in the dataset. The
             data dictionary doesn't offer any details into how that could happen. For now on, we'll therefore focus
-            mostly on the Police and Fire Departments.</p>
+            mostly on the ones that have positive regular hours worked noted.</p>
         <h2 style="font-size:25px; font-weight: lighter;">Let's take a closer look with some quick charts!</h2>
+
         <!-- Chart one with all three agencies -->
+
         <p>Some employees, mostly from the Department of Parks & Rec, had negative regular hours listed. So, narrowing
             down to those with a positive number of regular hours worked.</p>
         <p>That narrows down the dataset to 41 employees who:
@@ -55,8 +58,9 @@
             <li>Worked at least one regular hour</li>
             <li>Are from the Fire or Police Departments</li>
         </p>
-        <p>Interestingly, of these 41 employees, 40 are no longer on the city payroll. Together these 40 people made a little over $580,000 in overtime pay
-             Let's dig deeper!</p>
+        <p>Interestingly, of these 41 employees, 40 are no longer on the city payroll. Together these 40 people made a
+            little over $580,000 in overtime pay
+            Let's dig deeper!</p>
         <p>Who are these 40 employees?</p>
         <p>Twenty five of these were employed with in Brooklyn.</p>
     </div>
