--- a/stories/data-viz/salaries/index.html
+++ b/stories/data-viz/salaries/index.html
@@ -599,7 +599,7 @@
         <p>For 581 employees, their regular work hours were listed to be below zero in the dataset. The
             data dictionary doesn't offer any details into how that could happen. For now on, we'll therefore focus
             mostly on the ones that have positive regular hours worked noted.</p>
-        <h2 style="font-size:25px; font-weight: lighter;">Let's take a closer look with some quick charts!</h2>
+        <h2 style="font-size:25px; font-weight: lighter;"> Let's take a closer look.</h2>
 
 
         <!-- Chart one with all three agencies -->
