Added analyses button

--- a/stories/data-viz/salaries/index.html
+++ b/stories/data-viz/salaries/index.html
@@ -2189,13 +2189,8 @@
         </p>
         <p>
             The dataset has endless possibilities for exploration and this was just a
-            quick data dive
-        </p>
-        <p>
-            If you'd like to check out my analyses,
-            <a href="https://github.com/areenaarora/city-employees-salaries/blob/main/ALL-YEARS.ipynb"
-                target="_blank">click here!</a>
-        </p>
+            quick data dive. If you'd like
+        <a class="link-buttons" href="https://github.com/areenaarora/city-employees-salaries/blob/main/ALL-YEARS.ipynb" target="_blank">Check my analyses here!</a>    
     </div>
     <script src="https://unpkg.com/intersection-observer"></script>
     <script src="https://unpkg.com/scrollama"></script>
