Fixed meta tags

--- a/stories/data-viz/salaries/index.html
+++ b/stories/data-viz/salaries/index.html
@@ -6,12 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../stories-styles.css" />
     <!-- meta tags -->
-    <meta property="og:title" content="Different newsrooms' styleguides — analyzed!" />
-    <meta property="og:description" content="It’s not just the word “Black” that has been brought to
-    mainstream discussion. After 9/11, Reuters updated its guide to remove the word 'terrorist' and adviced
-    journalists to use more 'specific terms' like bomber, hijacker, attacker or gunman." />
-    <meta property="og:type" content="article" />
-    <meta property="og:image" content="https://areenaarora.com/stories/style-guides/" />
+    <meta property="og:title" content="NYC city employees' payroll — analyzed!"/>
+    <meta property="og:description" content="Who is making how much in overtime? What's up with city payroll?" />
+    <meta property="og:type" content="article"/>
+    <meta property="og:image" content="https://areenaarora.com/stories/data-viz/salaries" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@AreenaArora" />
     <!-- end of meta tags -->
