Added discretionary funds story to homepage

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     <div class="cards-wrapper">
         <a href="stories/data-viz/discretionary-funds" target="_blank">
             <div class="story-card">
-                <img src="./card-photos/nyc.jpg" alt="New York City" style="width:100%">
+                <img src="./card-photos/money.jpg" alt="Money" style="width:100%">
                 <div class="story-card-container">
-                    <h3>70 NYC employees made more, on average, than everyone else by working extra overtime hours</h3>
+                    <h3>Analyzing NYC city council's $371 million discretionary fund pool</h3>
                     <h4>April 2022</h4>
                 </div>
             </div>
