--- a/stories/data-viz/vaccines/index.html
+++ b/stories/data-viz/vaccines/index.html
@@ -7,12 +7,28 @@
     <link rel="stylesheet" href="vaccines-stylesheet.css">
     <link rel="icon" type="image/x-icon" href="sunflower.png">
     <!-- meta tags -->
-    <meta property="og:title" content="How different are different COVID vaccines?">
-    <meta property="og:description" content="A quick data dive!">
-    <meta property="og:type" content="article">
-    <meta property="og:image" content="https://areenaarora.com/stories/vaccines/">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:creator" content="@AreenaArora">
+    
+<!-- HTML Meta Tags -->
+<title>How different are different COVID vaccines?</title>
+<meta name="description" content="A quick data dive!">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://areenaarora.com/stories/data-viz/vaccines/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="How different are different COVID vaccines?">
+<meta property="og:description" content="A quick data dive!">
+<meta property="og:image" content="https://areenaarora.com/stories/vaccines/">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="areenaarora.com">
+<meta property="twitter:url" content="https://areenaarora.com/stories/data-viz/vaccines/">
+<meta name="twitter:title" content="How different are different COVID vaccines?">
+<meta name="twitter:description" content="A quick data dive!">
+<meta name="twitter:image" content="https://areenaarora.com/stories/vaccines/vaccines-venn.png">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+      
     <!-- end of meta tags -->
     <style>
         #scrolly {
