--- a/stories/data-viz/NY-senate-analyses/index.html
+++ b/stories/data-viz/NY-senate-analyses/index.html
@@ -41,4 +41,6 @@
         </nav>
         <h2>Between 2009 and now, the senate has enacted over five thousand laws</h2>
         <h3>Here's all you need to know!</h3>
+        <p> First, a quick refresher!</p>
+        <p> For a bill to become a law, </p>
 </body>
