--- a/stories/data-viz/NY-senate-analyses/index.html
+++ b/stories/data-viz/NY-senate-analyses/index.html
@@ -42,5 +42,9 @@
         <h2>Between 2009 and now, the senate has enacted over five thousand laws</h2>
         <h3>Here's all you need to know!</h3>
         <p> First, a quick refresher!</p>
-        <p> For a bill to become a law, </p>
+        <p> For a bill to become a law, senators first come up with an idea that's researched and presented as a bill.
+        </p>
+        <p>These bills are these reviewed, debated and discussed by the appropriate committees. This discussion can also include public hearings. At the committee level itself, bills can get modified, or rejected entirely. But, if not, they are then presented to the full Senate.</p>
+        <p>After presenting and discussing the bill, a vote is taken. If a majority of the Senators approves, the bill is then sent to the Assembly. It is referred to a committee for discussion, and if approved there, it goes to the full membership for a vote.</p>
+        <p>If a bill is approved in the Assembly without any amendments, it goes on to the Governor. If it is changed, the bill returns to the Senate for amendments.</p>
 </body>
