--- a/stories/data-viz/NY-senate-analyses/index.html
+++ b/stories/data-viz/NY-senate-analyses/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="../../stories-styles.css">
     <!-- meta tags -->
     <!-- HTML Meta Tags -->
-
     <link rel="icon" type="image/x-icon" href="sunflower.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +14,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
     <script defer data-domain="areenaarora.com" src="https://plausible.io/js/plausible.js"></script>
+    <title>New York Senate analyses</title>
 </head>
 
 <body>
