--- a/stories/data-viz/NY-senate-analyses/index.html
+++ b/stories/data-viz/NY-senate-analyses/index.html
@@ -47,4 +47,9 @@
         <p>These bills are these reviewed, debated and discussed by the appropriate committees. This discussion can also include public hearings. At the committee level itself, bills can get modified, or rejected entirely. But, if not, they are then presented to the full Senate.</p>
         <p>After presenting and discussing the bill, a vote is taken. If a majority of the Senators approves, the bill is then sent to the Assembly. It is referred to a committee for discussion, and if approved there, it goes to the full membership for a vote.</p>
         <p>If a bill is approved in the Assembly without any amendments, it goes on to the Governor. If it is changed, the bill returns to the Senate for amendments.</p>
+        <p>Once a bill reached the Governor, they have ten working days to sign it into law, or veto it. If the Governor fails to sign or veto a bill within the 10-day period means that it becomes law automatically.</p>
+        <p>Vetoed bills are returned to the house that first passed them, but they can become law if two-thirds of the members of each house vote to override the Governor's veto.</p>
+        <p>As of April 31, there had been over 1000 bills signed into law in the 2021-2022 session. For this analyses, I collected data on all bills signed into law since 2009.</p>
+        <h3>There were over 5000!</h3>
+        
 </body>
