--- a/stories/data-viz/NY-senate-analyses/index.html
+++ b/stories/data-viz/NY-senate-analyses/index.html
@@ -39,6 +39,7 @@
                 <i class="fas fa-home fa-2x" aria-hidden="true"></i>
             </a>
         </nav>
+        <h1> This is a work in progress! </h1>
         <h2>Between 2009 and now, the senate has enacted over five thousand laws</h2>
         <h3>Here's all you need to know!</h3>
         <p> First, a quick refresher!</p>
@@ -51,5 +52,5 @@
         <p>Vetoed bills are returned to the house that first passed them, but they can become law if two-thirds of the members of each house vote to override the Governor's veto.</p>
         <p>As of April 31, there had been over 1000 bills signed into law in the 2021-2022 session. For this analyses, I collected data on all bills signed into law since 2009.</p>
         <h3>There were over 5000!</h3>
-        
+
 </body>
