--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <h1>
         Areena Arora
     </h1>
+    <h2> Hi there! Thanks for being here. I'm working on updating this website and will be publishing an improved version soon. Stay tuned!</h2>
     <h2>
         Hi!
         I'm a <span class="blinking">data journalist.</span> I'm: </h2>
