--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Areena Arora</title>
 </head>
 <nav>
-    <a href="https://areenaarora.com/aboutme">
+    <a href="/aboutme">
         <p>
             <span style="font-weight:bolder; font-size: 28px;"> ABOUT </span>
         </p>
@@ -62,7 +62,7 @@
                 </a>
             </div>
             <div class="each_card">
-                <a href="https://areenaarora.com/stories/data-viz/discretionary-funds/" target="_blank">
+                <a href="/discretionary-funds/" target="_blank">
                     <p class="card-headline">A CITY PROGRAM TO HELP IMMIGRANTS</p>
                     <img src="./card-photos/dollars.jpg" alt="Money" style="width:100%; height:210px">
                     <p class="card-description">New York City Family Unity Project is the country’s first public program
@@ -71,7 +71,7 @@
                 </a>
             </div>
             <div class="each_card">
-                <a href="https://areenaarora.com/stories/data-viz/style-guides/" target="_blank">
+                <a href="/style-guides/" target="_blank">
                     <p class="card-headline">COMPARING NEWSROOMS' STYLEGUIDES</p>
                     <img src="./card-photos/typewriter.jpg" alt="Typewriter" style="width:100%">
                     <p class="card-description">In May 2020, when George Floyd was murdered during an arrest in
@@ -82,16 +82,16 @@
                 </a>
             </div>
             <div class="each_card">
-                <a href="https://areenaarora.com/stories/data-viz/style-guides/" target="_blank">
+                <!-- <a href="https://areenaarora.com/stories/data-viz/style-guides/" target="_blank"> -->
                     <p class="card-headline">NYC'S CLEAN ENERGY DEBATE</p>
                     <img src="./card-photos/power-grid.jpg" alt="Power Grid" style="width:100%">
                     <p class="card-description">As the city gears up to welcome two new renewable energy backed power
                         plants, some activists worry about the long-term sustainability of these projects ...
                     </p>
-                </a>
+                <!-- </a> -->
             </div>
             <div class="each_card">
-                <a href="https://areenaarora.com/stories/data-viz/style-guides/" target="_blank">
+                <a href="/street-flooding/" target="_blank">
                     <p class="card-headline">STREET FLOODING IN NYC</p>
                     <img src="./card-photos/nyc-stree-flooding.jpg" alt="Street Flooding" style="width:100%">
                     <p class="card-description">Between January 1, 2020, and March 31, 2022, New Yorkers lodged over
@@ -100,7 +100,7 @@
                 </a>
             </div>
             <div class="each_card">
-                <a href="https://www.idahopress.com/news/local/2cscoop/culvert-concerns-culvert-report-reveals-11-other-structures-in-deficient-condition/article_e1386f9b-49d1-518f-af3f-b20cad88bf62.html"
+                <a href="/climate-essay/"
                     target="_blank">
                     <p class="card-headline">A PERSONAL ESSAY ON CLIMATE CRISIS</p>
                     <img src="./card-photos/himalayas.jpg" alt="Snow covered mountains of Shimla, India"
@@ -111,13 +111,13 @@
                 </a>
             </div>
             <div class="each_card">
-                <a href="https://areenaarora.com/stories/data-viz/vaccines" target="_blank">
+                <!-- <a href="https://areenaarora.com/stories/data-viz/vaccines" target="_blank"> -->
                     <p class="card-headline">COMPARING DIFFERENT COVID VACCINES</p>
                     <img src="./card-photos/vaccines.jpg" alt="Vaccines" style="width:100%">
                     <p class="card-description">On CDC’s website, the words explaining vaccine ingredients for both
                         Pfizer and Moderna start with
                         the same sentences ...</p>
-                </a>
+                <!-- </a> -->
             </div>
             <div class="each_card">
                 <a href="https://apnews.com/article/10ab9cb7a5e24bdd86337d36a48c539b" target="_blank">
