Fixed about me link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Areena Arora</title>
 </head>
 <nav>
-    <a href="/aboutme">
+    <a href="/about">
         <p>
             <span style="font-weight:bolder; font-size: 28px;"> ABOUT </span>
         </p>
