--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
-    <title>About me</title>
+    <title>About</title>
 </head>
 <nav>
-    <a href="https://areenaarora.com/aboutme">
+    <a href="/index.html">
         <p>
             <span style="font-weight:bolder; font-size: 28px;"> HOME </span>
         </p>
