--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
     <title>Areena Arora</title>
 </head>
+<nav>
+    <a href="/about/index.html">
+        <p>
+            <span style="font-weight:bolder; font-size: 28px;"> ABOUT </span>
+        </p>
+    </a>
+</nav>
 <body>
     <div class="center-content">
         <h1>Hi! I'm Areena! 👩🏻‍💻</h1>
+        <p>Here's more <a href="/aboutme/index.html">about me :)</a> </p>
         <div class="social-media-icons">
             <i class="fa-brands fa-twitter fa-2x" style="color:#1DA1F2">
                 <a href="https://twitter.com/AreenaArora" target='blank'></a>
