--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <nav>
     <a href="/aboutme">
         <p>
-            <span style="font-weight:bolder; font-size: 28px;"> ABOUT </span>
+            <span style="font-weight:bolder; font-size: 28px;"> ABOUT ME</span>
         </p>
     </a>
 </nav>
